--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "convex": "^1.28.0",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.548.0",
-    "next": "^16.0.7",
+    "next": "^16.1.1",
     "next-themes": "^0.4.6",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.66.0",
     "react-intersection-observer": "^10.0.0",
@@ -47,9 +47,9 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/node": "^20.19.27",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
     "husky": "^9.1.7",
@@ -57,6 +57,6 @@
     "prettier": "^3.6.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5"
+    "typescript": "^5.9.3"
   }
 }
