--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "forceConsistentCasingInFileNames": true,
     "target": "ES2017",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
@@ -33,4 +34,5 @@
     ".next\\dev/types/**/*.ts"
 , "hooks/use-convex-query.jsx"  ],
   "exclude": ["node_modules"]
+
 }
